--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.44"
+enum_dispatch = "0.3.8"
 once_cell = "1.10.0"
 flate2 = "1.0.23"
-rand = "0.8.4"
+rand = { version = "0.8.4", features = ["small_rng"]}
