--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,8 @@ enum_dispatch = "0.3.8"
 once_cell = "1.10.0"
 flate2 = "1.0.23"
 rand = { version = "0.8.4", features = ["small_rng"]}
+rayon = "1.5.1"
+
+[profile.release]
+lto = true
+debug = true
