--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,12 @@ edition = "2018"
 [dependencies]
 anyhow = "1.0.44"
 enum_dispatch = "0.3.8"
-once_cell = "1.10.0"
 flate2 = "1.0.23"
-rand = { version = "0.8.4", features = ["small_rng"]}
+once_cell = "1.10.0"
+rand = { version = "0.8.4", features = ["small_rng"] }
 rayon = "1.5.1"
+serde = { version = "1.0.136", features = ["derive"] }
+serde_json = "1.0"
 
 [profile.release]
 lto = true
