--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.44"
+clap = { version = "3.1.18" }
 enum_dispatch = "0.3.8"
 flate2 = "1.0.23"
 once_cell = "1.10.0"
